--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<section class="marketplace_layout">
+    <app-sidebar></app-sidebar>
+    <router-outlet class="marketplace_content"></router-outlet>
+</section>
 <app-footer></app-footer>
