--- a/src/app/features/marketplace/marketplace.component.html
+++ b/src/app/features/marketplace/marketplace.component.html
@@ -1,3 +1,4 @@
-<section style="width: 100%; height: max-content; min-height: 50rem;">
-    <app-sidebar></app-sidebar>
+<section class="marketplace_layout">
+    <!-- <app-sidebar></app-sidebar> -->
+    <router-outlet></router-outlet>
 </section>
