--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     <mat-sidenav mode="side" opened class="sidenav_container bg-gray">
         <app-chips-avatar class="chips_align"></app-chips-avatar>
         <mat-divider class="divider"></mat-divider>
-        <button mat-menu-item>Perfil</button>
+        <button mat-menu-item [routerLink]="['profile']">Perfil</button>
         <button mat-menu-item>Categorías</button>
         <button mat-menu-item>Publicaciones</button>
         <button mat-menu-item>Contratos</button>
@@ -14,9 +14,4 @@
         <mat-divider class="divider"></mat-divider>
         <button mat-menu-item>Configuración</button>
     </mat-sidenav>
-    <mat-sidenav-content>
-        <div class="container">
-            
-        </div>
-    </mat-sidenav-content>
 </mat-sidenav-container>
