--- a/src/app/features/marketplace/marketplace.component.html
+++ b/src/app/features/marketplace/marketplace.component.html
@@ -1,4 +1,5 @@
-<section class="marketplace_layout">
-    <!-- <app-sidebar></app-sidebar> -->
-    <router-outlet></router-outlet>
+<section class="content">
+    <div #cardsIterator>
+        <app-publication></app-publication>
+    </div>
 </section>
