--- a/src/app/features/marketplace/marketplace.component.scss
+++ b/src/app/features/marketplace/marketplace.component.scss
@@ -1,10 +1,3 @@
-.marketplace_layout {
-    width: 100%; 
-    height: max-content; 
-    min-height: 50rem;
-    display: flex;
-}
-
-.marketplace_content {
+.content {
     padding: 1.5rem;
 }
