[ADD] Card publication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header></app-header>
 <section class="marketplace_layout">
     <app-sidebar></app-sidebar>
-    <router-outlet></router-outlet>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
 </section>
 <app-footer></app-footer>
