--- a/src/app/features/marketplace/marketplace.component.html
+++ b/src/app/features/marketplace/marketplace.component.html
@@ -1,5 +1,10 @@
-<section class="content">
-    <div #cardsIterator>
-        <app-publication></app-publication>
-    </div>
-</section>
+<div class="container">
+    <app-publication [title]="'Arreglo de mesa'" [description]="'Necesito arreglar las patas de una mesa.'" class="card-item"></app-publication>
+    <app-publication [title]="'Arreglo de lavaropas'" [description]="'El lavaropas me hace un sonido raro, prrrrumm.'" class="card-item"></app-publication>
+    <app-publication [title]="'Levantar una pared'" [description]="'Necesito levantar una pared en la casa de mi suegra.'" class="card-item"></app-publication>
+    <app-publication [title]="'Hacer losa'" [description]="'Necesito hacer una losa de 10x15'" class="card-item"></app-publication>
+    <app-publication [title]="'Construcción de local'" [description]="'Necesito construir un local de ropa.'" class="card-item"></app-publication>
+    <app-publication [title]="'Arreglo de cocina'" [description]="'Las visagras de la cocina están flojas.'" class="card-item"></app-publication>
+    <app-publication [title]="'Cortar el pasto'" [description]="'Necesito alguien para cortar el pasto de un lote.'" class="card-item"></app-publication>
+    <app-publication [title]="'Cortar el pasto'" [description]="'Necesito alguien para cortar el pasto de un lote.'" class="card-item"></app-publication>
+</div>
