[ADD] Add transition to publication card

--- a/src/app/shared/components/publication/publication.component.scss
+++ b/src/app/shared/components/publication/publication.component.scss
@@ -40,9 +40,15 @@ img {
   box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
   border-radius: 1em;
   height: 30rem;
+  transition: all 1s;
   // background: #ECE9E6;
 // background: linear-gradient(to right, #FFFFFF, #ECE9E6);
 
+}
+
+.card:hover {
+  transform: scale(1.05);
+  transition: all 1s;
 }
 
 
