Revert "[ADD] Categories Router"
This reverts commit bbf3ca5fcfae3fc345885d9a0e97590542042e19.

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
         <app-chips-avatar class="chips_align"></app-chips-avatar>
         <mat-divider class="divider"></mat-divider>
         <button mat-menu-item [routerLink]="['profile']">Perfil</button>
-        <button mat-menu-item  [routerLink]="['categories']">Categorías</button>
+        <button mat-menu-item>Categorías</button>
         <button mat-menu-item>Publicaciones</button>
         <button mat-menu-item>Contratos</button>
         <button mat-menu-item>Guardados</button>
